--- a/chatbot/style.css
+++ b/chatbot/style.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
+    padding: 0;
 }
+
 nav{
     display: block;
     background-color: black;
@@ -17,8 +19,54 @@ nav a:hover{
     background-color: brown;
     transition: ease-in-out;
 }
-.social-media-box{
+
+
+
+.introduction{
+    display: block;
+    background-color: aquamarine;
+    padding: 5% 10%;
+}
+.introduction p{
+    background-color: #666666;
+}
+.introduction p img{
+    width: 50%;
+    height: 200px;
+    margin: 10px;
+    float: left;
+}
+/* .clearfix{
+    clear: both;
+    height: 10px;
+    background-color: red;
+} */
+
+.developer-wrap{
+    width: 90%;
+    margin: auto;
+    padding: 5px;
+    background-color: #666666;
+}
+.col{
+    width: 30%;
+    background-color: blueviolet;
+    margin: 1.5%;
+    float: left;
+}
+.col img{
     width: 100%;
+    height: 200px;
+}
+.clearfix{
+    height: 10px;
+    background-color: black;
+    clear: both;
+}
+
+
+.social-media-box{
+    display: block;
     background-color: orange;
     text-align: center;
 }
@@ -30,12 +78,15 @@ nav a:hover{
     background-color: blue;
     margin-top: 10px;
 }
-img{
-    width: 10%;
-    height: 80px;
-    margin: 0% 10%;
-
+.social-media-img a img{
+    background-color: #666666;
+    width: 20%;
+    height: 150px;
+    margin: 0% 5%;
 }
+
+
+
 footer{
     display: block;
     background-color:violet;
